Adds capability for watchers and followers
